# SCGF

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
conf/: SCGF.xml
conf/design/: 100000000.img.xml
doc/: naming.md  setup_dev_envir.md
proto/pb/: SCGF_CS.proto
res/script/: script.md  test.lua
src/: CMakeLists.txt  SCGF.cpp  SCGF.h
src/test/: main.cpp  test.cpp  test_easy_profiler.cpp  test_easy_profiler.h  test_ecs.cpp  test_entt.cpp  test_imgui.cpp  test_imgui.h  test_litehtml.cpp  test_litehtml.h  test_lua.cpp  test_lua.h  test_pb.cpp  test_scgf_xml.cpp  test_scgf_xml.h  test_sdl3.cpp  test_sdl3.h  test_spdlog.cpp  test_spdlog.h  test_string.cpp
src/util/: Compressor.cpp  Compressor.h  Cryptor.cpp  Cryptor.h  File.cpp  Logger.cpp  Logger.h  LuaHelper.cpp  LuaHelper.h  Misc.cpp  Performance.cpp  Performance.h  SDLHelper.cpp  SDL_helper.cpp  SDL_helper.h  Singleton.h  String.cpp  String.h  UTF8String.cpp  UTF8String.h  UTF8_string.cpp  UTF8_string.h  compressor.cpp  compressor.h  cryptor.cpp  cryptor.h  file_helper.cpp  file_helper.h  logger.cpp  logger.h  lua_helper.cpp  lua_helper.h  misc.cpp  misc.h  performance.cpp  performance.h  protobuf_helper.cpp  protobuf_helper.h  singleton.h
test/: CMakeLists.txt  main.cpp  test_ecs.cpp  test_ecs.h  test_entt.cpp  test_entt.h  test_imgui.cpp  test_litehtml.cpp  test_pb.h  test_sdl3.cpp  test_spdlog.cpp  test_string.cpp  test_string.h
tool/: aes_key_loader.py  clean_all_on_windows.bat  clean_build_dist_on_windows.bat  cmake_build_dist_debug_on_windows.bat  cmake_build_dist_release_on_windows.bat  cmake_build_game_client_dist_debug_on_windows.bat  cmake_build_game_client_dist_release_on_windows.bat  cmake_build_intermediate_debug_on_windows.bat  cmake_build_intermediate_release_on_windows.bat  cmake_build_on_windows.bat  generate_proto.py  generate_scgf_files_on_windows.bat  unzip_decr_scripts.py  unzip_decr_xml_files.py  zip_encr_scripts.py  zip_encr_xmls.py  zip_project_on_windows.bat  zipper.py
